# Zen.Ai

./: .gitignore  CMakeLists.txt
docs/: Мотивационная системма.mm
libs/: CMakeLists.txt
libs/json/: CMakeLists.txt  jsoncpp.cpp
libs/json/json/: json.h
libs/libuuid/: CMakeLists.txt  test_uuid.c
libs/loki/: CMakeLists.txt
libs/loki/lib/: CMakeLists.txt
libs/loki/src/: SmallObj.cpp
src/: CMakeLists.txt  action.cpp  action.h  action.hpp  action_steps.cpp  action_steps.h  actions_lib.cpp  addiction.h  addiction.hpp  ai_common.cpp  ai_common.hpp  char_gnerator.cpp  character.cpp  character.h  character.hpp  context.hpp  inventory.cpp  inventory.h  item.cpp  item.h  item.hpp  log.cpp  main.cpp  manager.h  manager.hpp  managers.cpp  managers.h  skill.cpp  skill.h  skill.hpp  stdafx.cpp  stdafx.h  steps.cpp  steps.h  threads.h  wish.h  wish.hpp  world.cpp  world.h  world.hpp
src/include/zenai/: action.h  action_steps.h  actions_lib.h  addiction.h  ai_common.h  char_generator.h  character.h  context.h  inventory.h  item.h  log.h  manager.h  managers.h  skill.h  stdafx.h  steps.h  wish.h  world.h
src/include/zenai/managers/: action_manager.h  managers.h  skill_manager.h
src/old/: aicore.hpp
src/tests/: test.cpp
src/tests/unit_tests/: action_tests.cpp  char_generator_tests.cpp  managers_tests.cpp  skill_tests.cpp  wish_tests.cpp  world_tests.cpp
